--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ cache:
     - vendor
     - $HOME/.composer/cache
 
+before_install: phpenv config-rm xdebug.ini
+
 # install dependencies
 install:
   - travis_retry composer self-update
