--- a/tests/codeception.yml
+++ b/tests/codeception.yml
@@ -1,5 +1,5 @@
-namespace: dektrium\user\tests
 actor: Tester
+
 paths:
     tests: codeception
     log: codeception/_output
@@ -7,5 +7,11 @@ paths:
     helpers: codeception/_support
 settings:
     bootstrap: _bootstrap.php
-    colors: true
+    suite_class: \PHPUnit_Framework_TestSuite
     memory_limit: 1024M
+    log: true
+    colors: true
+config:
+    # the entry script URL (with host info) for functional and acceptance tests
+    # PLEASE ADJUST IT TO THE ACTUAL ENTRY SCRIPT URL
+    test_entry_url: http://localhost:8080/index-test.php
