--- a/tests/codeception/functional.suite.yml
+++ b/tests/codeception/functional.suite.yml
@@ -1,10 +1,19 @@
+# Codeception Test Suite Configuration
+
+# suite for functional (integration) tests.
+# emulate web requests and make application process them.
+# (tip: better to use with frameworks).
+
+# RUN `build` COMMAND AFTER ADDING/REMOVING MODULES.
+#basic/web/index.php
 class_name: FunctionalTester
 modules:
     enabled:
       - Asserts
+      - Filesystem
       - Yii2
       - tests\codeception\_support\FixtureHelper
       - tests\codeception\_support\MailHelper
     config:
         Yii2:
-            configFile: 'codeception/_config/functional.php'
+            configFile: 'codeception/config/functional.php'
