--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
 before_script:
   - cd tests
   - mysql -e 'create database dektrium_test;'
-  - php codeception/_app/yii migrate/up --interactive=0
+  - php codeception/bin/yii migrate/up --interactive=0
   - ~/.composer/vendor/bin/codecept build
 
 script: ~/.composer/vendor/bin/codecept run
